<resources>
    <string name="app_name">Medicial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Custom String -->
    <string name="app_name_screen">MEDICIAL</string>
    <string name="imgv_description">description</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="invalid">Incorrect information</string>
    <string name="checkbox">Remember Me</string>
    <string name="text_sign_in">Sign in</string>
    <string name="forget_pass">Forget your password?</string>
    <string name="text_ques">You don\'t have an account?</string>
    <string name="SignUp_Now">SignUp Now</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="re_pass">Confirm Password</string>
    <string name="app_bar_home_title">Home</string>
    <string name="app_bar_admin_title">Admin Dashboard</string>
    <string name="app_bar_reminder_title">New reminder</string>
    <string name="app_bar_profile_title">Profile</string>
    <string name="app_bar_calendar_title">Calendar</string>
    <string name="app_bar_schedule_title">New reminder</string>
    <string name="app_bar_update_title">Update data</string>
    <string name="app_bar_create_u_title">Create user</string>
    <string name="app_bar_delete_u_title">Delete user</string>
    <string name="app_bar_update_u_title">Update user</string>
    <string name="app_bar_show_u_title">Show users</string>
    <string name="app_bar_show_ud_title">Show user data</string>
    <string name="app_bar_forget_pass_title">Reset password</string>
    <string name="text_med_det">Medicine details</string>
    <string name="text_add_med">Add medicine</string>
    <string name="med_name">medicine name</string>
    <string name="text_amount">Amount</string>
    <string name="hint_amount">amount</string>
    <string name="text_desc">Description</string>
    <string name="hint_desc">add a description here</string>
    <string name="text_upload_img">Upload image</string>
    <string name="text_upload_img_note">Upload your medicine pill picture, you can upload from gallery or capture from camera.</string>
    <string name="text_sel_sch">Select schedule</string>
    <string name="text_desc_sch">Schedule determines when notification will be pushed</string>
    <string name="text_date">Date</string>
    <string name="hint_date">dd-mm-yyyy</string>
    <string name="text_time">Time</string>
    <string name="hint_time">hh:mm aa</string>
    <string name="text_repeat">Repeat at</string>
    <string name="hint_repeat">repeat</string>
    <string name="dialog_text_reg">REGISTERED</string>
    <string name="dialog_text_suc">SUCCESSFULLY</string>
    <string name="create_success">Successful creation</string>
    <string name="dialog_text_done">Done</string>
    <string name="text_acc_info">Account information</string>
    <string name="text_user_name">User name</string>
    <string name="text_enter_user_name">Enter your username</string>
    <string name="hint_user_name">username</string>
    <string name="text_enter_pass">Enter password</string>
    <string name="hint_pass">new password</string>
    <string name="text_enter_repass">Repeat password</string>
    <string name="hint_repass">retype password</string>
    <string name="btn_reset">Reset password</string>
    <string name="user_id">user id</string>
    <string name="create_failed">Failed to create a new user</string>
    <string name="txtv_update">Enter the user ID you want to update</string>
    <string name="txtv_waiting">I\'m waiting for you to take your medicine</string>
    <string name="txtv_if_take">If you take your medication,\nclick below to confirm</string>
    <string name="btn_confirm_take">Confirm take</string>
    <string name="checkbox_once">Once</string>
    <string name="checkbox_daily">Daily</string>
    <!-- item card -->
    <string name="med_id">0</string>
    <string name="med_day">18</string>
    <string name="med_month">Nov</string>
    <string name="text_tablets_left">tablets left</string>
    <string name="med_time">10:00 AM</string>
    <!-- date menu -->
    <string name="save">Save</string>
    <!-- main menu -->
    <string name="ho">Home</string>
    <string name="cal">Calender</string>
    <string name="sett">Settings</string>
    <string name="pro">Profile</string>
    <string name="my_pro">My profile</string>
    <string name="log">Logout</string>
    <!-- med menu -->
    <string name="next">Next</string>
    <!-- pop menu -->
    <string name="sh">Show image</string>
    <string name="del">Delete</string>
    <string name="up">Update</string>
    <!-- validation-->
    <string name="empty">Field cannot be empty</string>
    <string name="username_length">Minimum 6 characters required</string>
    <string name="username_inputType">Enter only letters and numbers</string>
    <string name="username_exists">User already exists!</string>
    <string name="name_inputType">Enter only letters</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="password_length">Minimum 6 characters required</string>
    <string name="password_notMatching">Password does not match</string>
    <string name="reg_filled">REGISTRATION FAILED</string>
    <!-- Admin Dashboard -->
    <string name="create">create user</string>
    <string name="delete">delete user</string>
    <string name="show">show users</string>
    <string name="update">update user</string>
    <string name="show_data">show\ndata</string>


</resources>