<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MedicineActivity">

    <ImageView
        android:id="@+id/imgv_bg_pills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.2"
        android:contentDescription="@string/imgv_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_pills" />

    <TextView
        android:id="@+id/txtv_schedule_det"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_med_det"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_add_med"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtv_schedule_det"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtv_add_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_add_med"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_medName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/txtv_add_medicine"
                android:layout_marginEnd="40dp"
                android:autofillHints="name"
                android:backgroundTint="@color/accent"
                android:drawableStart="@drawable/ic_outline_medicine_bottle"
                android:drawablePadding="8dp"
                android:hint="@string/med_name"
                android:inputType="textCapSentences"
                android:padding="8dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            <ImageView
                android:id="@+id/imageView_scanner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@+id/txtv_add_medicine"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/imgv_description"
                app:srcCompat="@drawable/ic_outline_document_scanner" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_add_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView_add_med"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtv_amount_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_amount"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="number"
                android:backgroundTint="@color/accent"
                android:drawableStart="@drawable/ic_outline_tablets"
                android:drawablePadding="8dp"
                android:hint="@string/hint_amount"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_add_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardView_add_amount"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_desc"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/custom_edt_shape"
                android:gravity="top"
                android:hint="@string/hint_desc"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:padding="10dp"
                android:textColor="@color/accent"
                android:textColorHint="@color/gray"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

