<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="5dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".admin.AdminActivity">

    <ImageView
        android:id="@+id/imgv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:contentDescription="@string/imgv_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/img_elec" />

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_create_user"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_delete_user"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_show_users"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/show"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_update_user"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/update"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_users_data"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/show_data"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/accent"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>
</RelativeLayout>

