<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtv_medId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/med_day"
                android:textColor="@color/accent"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:text="@string/med_month"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtv_medName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/med_name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/options"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_baseline_more"
                    android:contentDescription="@string/imgv_description"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/imgv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/imgv_description"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:text="@string/hint_amount"
                    android:textColor="@color/accent"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/txtv_tablets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:singleLine="true"
                    android:text="@string/text_tablets_left"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:alpha="0.5"
                    android:inputType="textMultiLine"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:ignore="SpeakableTextPresentCheck,TextViewEdits" />

                <TextView
                    android:id="@+id/txtv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/med_time"
                    android:textColor="@color/accent"
                    android:textSize="20sp"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>